[gd_scene load_steps=16 format=2]

[ext_resource path="res://GFX/Enemies/sun1.png" type="Texture" id=1]
[ext_resource path="res://GFX/Enemies/sun2.png" type="Texture" id=2]
[ext_resource path="res://Enemies/SunBoss.gd" type="Script" id=3]
[ext_resource path="res://Items/RandomTimer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/MiniSun.tscn" type="PackedScene" id=6]
[ext_resource path="res://SFX/ImpactSFX/explosionCrunch_000.ogg" type="AudioStream" id=7]
[ext_resource path="res://SFX/ImpactSFX/explosionCrunch_004.ogg" type="AudioStream" id=8]
[ext_resource path="res://SFX/ImpactSFX/explosionCrunch_001.ogg" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 4.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75, 4 ),
"transitions": PoolRealArray( 1, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05, 7.01112e-05 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ), Vector2( 25, 0 ), Vector2( -25, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1.27456, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0, 0.001, 1.25 )
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.75, 1.5, 2.25 )
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Intro"

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "default", "attack", "default" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Spawner")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
}, {
"args": [  ],
"method": "spawn"
}, {
"args": [  ],
"method": "spawn"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "wind_up"
length = 3.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1.25, 1.75, 2.25, 2.5, 2.75, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ), Vector2( 50, 0 ), Vector2( 0, 50 ), Vector2( -50, 0 ), Vector2( 0, -50 ), Vector2( 0, -50 ), Vector2( 0, -65 ), Vector2( 0, 0 ) ]
}

[node name="Sun" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Death = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Intro = SubResource( 6 )
anims/attack = SubResource( 4 )
anims/wind_up = SubResource( 5 )

[node name="RandomTimer" parent="." instance=ExtResource( 4 )]
min_wait_time = 12.0
max_wait_time = 20.0
loops = false
auto = false
take_from_parent = false

[node name="StartTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Spawner" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 10.3826 )
spawnling_scene = ExtResource( 6 )
loops = false
auto = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 3.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 3.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RandomTimer" to="." method="_on_RandomTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
